projects/vb6parse/snapshots/tests/call_argument_list/call_no_arguments.snap
---
source: projects/vb6parse/tests/call_argument_list.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: CallStatement
      children:
        - kind: Identifier
          text: DoEvents
